# vlc-xattr-plugin

./: .gitignore  CMakeLists.txt  README.md  compat.h  library.c  library.h  tag_utils.c  tag_utils.h  xattr_compat.h
.github/workflows/: ci.yml  release.yml
ci/docker/: Dockerfile.fedora-40  Dockerfile.ubuntu-24.04  build.sh
debian/: changelog  control  copyright  libxattrplaying_plugin.install
spec/: libxattrplaying_plugin.spec
tests/: tag_utils_tests.c  xattr_compat_test.c
tests/mocks/vlc/: vlc_common.h  vlc_fs.h
